--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,5 +1,5 @@
-name: Run Gradle on PRs
-on: pull_request
+name: Run Gradle
+on: [push, pull_request]
 jobs:
   gradle:
     strategy:
@@ -7,11 +7,16 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-java@v3
+    - name: Checkout
+      uses: actions/checkout@v4
+    - name: Setup Java JDK
+      uses: actions/setup-java@v3
       with:
         distribution: temurin
-        java-version: 11
+        java-version: |
+          17
+          11
+          8
         
     - name: Setup Gradle
       uses: gradle/gradle-build-action@v2
