--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -13,9 +13,7 @@ jobs:
       uses: actions/setup-java@v3
       with:
         distribution: temurin
-        java-version: |
-          11
-          8
+        java-version: 8
         
     - name: Setup Gradle
       uses: gradle/gradle-build-action@v2.9.0
