--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -16,11 +16,13 @@ jobs:
         java-version: |
           8
           11
+          17
 
     - name: Make gradlew executable
       run: chmod +x gradlew
 
     - name: Setup Gradle
-      uses: mikepenz/gradle-dependency-submission@v0.9.0
-      with:
-        gradle-build-module: ":app"
+      uses: gradle/gradle-build-action@v2.9.0
+
+    - name: Execute Gradle build
+      run: ./gradlew build
