--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -13,10 +13,7 @@ jobs:
       uses: actions/setup-java@v3
       with:
         distribution: temurin
-        java-version: |
-          8
-          11
-          17
+        java-version: 8
 
     - name: Make gradlew executable
       run: chmod +x gradlew
