--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,6 +20,8 @@ jobs:
 
     - name: Setup Gradle
       uses: gradle/gradle-build-action@v2.9.0
+      with:
+        dependency-graph: generate-and-submit
 
     - name: Execute Gradle build
       run: ./gradlew build
