--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,5 +23,8 @@ jobs:
       with:
         dependency-graph: generate-and-submit
 
+    - name: Look at directory
+      run: ls -l /usr/local/lib/android/sdk
+
     - name: Execute Gradle build
       run: ./gradlew build
