--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,19 +1,23 @@
-name: Run Gradle
-on: [push, pull_request]
+name: Build Gradle App
+on:
+  push:
+    branches: [ "master" ]
+  pull_request:
+    branches: [ "master" ]
+
 jobs:
   gradle:
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v4
+
     - name: Setup Java JDK
       uses: actions/setup-java@v3
       with:
         distribution: temurin
         java-version: 8
+        cache: gradle
 
     - name: Make gradlew executable
       run: chmod +x gradlew
@@ -23,5 +27,17 @@ jobs:
       with:
         dependency-graph: generate-and-submit
 
+    - name: Validate Gradle Wrapper
+      uses: gradle/wrapper-validation-action@v1
+
     - name: Execute Gradle build
       run: ./gradlew build
+
+    - name: Execute Gradle assemble
+      run: ./gradlew assemble
+
+    - name: Upload artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: android-lab4
+        path: build
